<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/silver"
    tools:context="ec.repositoriocompartido.RecetasApp.PreferenciasActivity">
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloPref"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_margin="2dp"

        android:textSize="30dp"
        android:background="@color/burlywood"
        android:textColor="@color/black"
        />


    <TextView
        style="@style/listasTheme"
        android:id="@+id/txtCanales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimento"
        android:textAllCaps="true"
        android:textSize="27dp"
        android:textStyle="bold"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCanales"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:background="@color/linen"/>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regresar"
            android:textSize="25dp"
            />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:textSize="25dp"
            />
    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>