<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:paddingHorizontal="16dp"
    android:paddingVertical="6dp"
    tools:context="ec.repositoriocompartido.RecetasApp.MetaActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvInicio"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="26dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical"

            android:background="@color/green">

            <TextView
                android:id="@+id/txtTituloMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTituloMeta"
                android:textAllCaps="true"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/txtSubTituloMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtSubTituloMeta"
                android:textColorHint="@color/lavender"
                android:textAllCaps="true"
                android:textSize="25dp"
                android:textStyle="normal"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>





    <androidx.cardview.widget.CardView
        android:id="@+id/cvReducir"
        android:layout_width="0dp"
        android:layout_height="70dp"

        app:layout_constraintTop_toBottomOf="@+id/cvInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/imcColor2"
        app:cardCornerRadius="16dp"
        android:layout_margin="6dp">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        >

            <ImageView
                android:background="@color/yellow"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/reducir"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txtReducir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/reducir"
                android:textAllCaps="true"
                android:textSize="16dp"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMantener"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvReducir"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        android:layout_margin="6dp"
>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="6dp"

            >
            <ImageView
                android:background="@color/coral"
                android:layout_width="100dp"
                android:layout_height="50dp"

                android:src="@drawable/mantener"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txtMantener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mantener"
                android:textAllCaps="true"
                android:textSize="16dp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAumentar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMantener"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/imcColor2"
        app:cardCornerRadius="16dp"
        android:layout_margin="6dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="6dp"

            >
            <ImageView
                android:background="@color/blueviolet"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/aumentar"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txtAumentar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aumentar"
                android:textAllCaps="true"
                android:textSize="16dp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Altura"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAumentar"
        android:background="@color/imcColor2"
        app:cardCornerRadius="16dp"
        android:layout_margin="4dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/darkcyan">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sueno"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/txtHorasSueno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7Hr"
                android:textAllCaps="true"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/sngHorasSueno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="12"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/Peso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Edad"
        app:layout_constraintTop_toBottomOf="@+id/Altura"
        android:background="@color/imcColor2"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="4dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/darkorange">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actividades"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/txtSedentarias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="27"
                android:textAllCaps="true"
                android:textSize="46dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSedentariasMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/menos"
                app:backgroundTint="@color/black"
                app:tint="@color/white"
                android:contentDescription="TODO" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSedentariasMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                android:src="@drawable/mas"
                android:background="@color/black"
                app:backgroundTint="@color/black"
                app:tint="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>







    <androidx.cardview.widget.CardView
        android:id="@+id/Edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toEndOf="@+id/Peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Altura"
        android:background="@color/imcColor2"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="4dp"
        android:layout_margin="4dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/darkgreen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/txtFisicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="27"
                android:textAllCaps="true"
                android:textSize="46dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnFisicasMenos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/menos"
                    app:backgroundTint="@color/black"
                    app:tint="@color/white"
                    android:contentDescription="TODO" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnFisicasMas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"

                    android:src="@drawable/mas"
                    android:background="@color/black"
                    app:backgroundTint="@color/black"
                    app:tint="@color/white"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/Peso"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/regresar"
        android:textSize="25dp"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/btnAnterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edad"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/siguiente"
        android:textSize="25dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>